Jann 30/objects/RFACapitalExpenditure__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>This custom setting is used for adding the capital expenditure data.</description>
    <fields>
        <fullName>AssetCategory__c</fullName>
        <label>Asset Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvestmentObjective__c</fullName>
        <label>Investment Objective</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordTypeId__c</fullName>
        <label>Record Type ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <label>Record Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>RFA_CapitalExpenditure</label>
</CustomObject>